	  the close operation may hang indefinitely!
	* net/net_tcppoll.c.  Removed an unnecessary check for outstanding, un-ACKed
	  data.  The NuttX socket layer keeps track of ACKs and doesn't need this check;
	  removing the check should improve write throughput
	* Add DEBUG configuration option to enable debug console output without disabling
	  optimization (and vice versa)
	* Changed lots of occurrents of debug macro dbg() to lldbg().  dbg() uses
	  stdout to output debug data.  That works fine unless (1) the dbg() macro
	  is interrupt logic and the interrupted task has redirected stdout!  Most
	  changes were in uIP.
	* net/uip/uip_tcpinput.c.  Connection reference count was not being set correctly
	  when a socket is created by accepting a new connection.  Since the reference
	  count is bad, such sockets are not successfully duplicated when being passed
	  to new tasks.
	* net/net_clone.c.  Similarly, after a socket is cloned, its reference count
	  was not being initialized.
	* lib/lib_strstr.c.  Improperly incremented pointer could cause comparison
	  failures.
	* net/.  Connection reference count must always be set to zero before calling
	  uip_tcpfree() or it could trigger a DEBUGASSERT that verifies that the
	  reference count is zero before freeing a connection structure.
	* net/uip/uip_listen.c.  uip_accept() consulted the wrong list to find the
	  listener on a socket.  The previous logic worked most of the time, but
	  occasionally picked the wrong listener.
	* net/net_close.c and net/net_sockets.c.  Sockets were not being closed
	  when a task exits.  If many server tasks are created and exit without closing
	  sockets (such as with CGI tasks), then eventually, you will run out of sockets.
	* netutils/thttpd.  Basic functionality of THTTPD is complete.  This includes
	  serving up files from a file system and executing NXFLAT-based CGI programs
	  and pipe the stdout back to the HTTP client.

0.4.12 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>